--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "project"
+name = "brainwave"
 version = "0.1.0"
 description = ""
 authors = ["iamtatsuki05 <tatsukio0522@gmail.com>"]
 packages = [
-    { include = "project", from = "src/" },
+    { include = "brainwave", from = "src/" },
 ]
 
 [tool.poetry.dependencies]
