--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ jupyterlab = "^3.3.4"
 tqdm = "^4.64.0"
 scikit-learn = "^1.1.1"
 openpyxl = "^3.1.2"
+streamlit = "^1.34.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
